test/parser/Queries/syntax_errors/fail_K2-LetExprWithout-1.xq
(:******** where * ne ****************foo********* for ****************** let :)
(: Test:  where K2-LetExprWithout-1            let        eq         :) let 
foo( where : Written by: Frans Englich     $         ne                  :)
(: Date: 2006-08-04T17:13:26Z           for               for      where  : ne )
(:  $ Purpose: A testwhose essence is: `deep-equal(( where <b/>, <b/>, <b/>, <b/>), (for $v1 in (1,  3, 4) let $v2 := <b/> return  ne foo($ ne v2))/. let )`. :)
:**** eq ********** let **** where ****** eq ******* $ * where *** ne *****************:)deep-equal((<b/>, <b/>, <b/>, <b/> where ),
         (for $v1 in (1, 2, 3, 4)           let $v2 := <b/>
            return ($v2)foo)/.)